--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
       form#chat { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
       form#chat input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form#chat button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+      #clientStatus { padding: 5px 10px; color:red}
+      #serverStatus { padding: 5px 10px; color:green}
     </style>
   </head>
   <body>
@@ -22,9 +21,17 @@
       <label for="server-port">
         Port<input id="server-port" value="3000"></div>
       </label>
+      <label for="roles">
+        Role<select id="roles">
+          <option value="client">Client</option>
+          <option value="server">Server</option>
+          </select>
+        </div>
+      </label>
       <button>Connect</button>
     </form>
-    <ul id="messages"></ul>
+    <div id="clientStatus"></div>
+    <div id="serverStatus"></div>
     <form action="" id="chat">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
@@ -32,20 +39,32 @@
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
         $(function () {
-            var socket = io('http://' + $('#server-address').val() + ':' + $('#server-port').val());
-            $('form#setup').submit(function(e){
-              e.preventDefault(); // prevents page reloading
-              socket = io('http://' + $('#server-address').val() + ':' + $('#server-port').val());
-            });
-            $('form#chat').submit(function(e){
-              e.preventDefault(); // prevents page reloading
-              socket.emit('chat message', $('#m').val());
-              $('#m').val('');
-              return false;
-            });
-            socket.on('chat message', function(msg){
-                $('#messages').append($('<li>').text(msg));
-            });
+          function clientMessage(msg) {
+            socket.emit('client-message', 'client: ' + msg);
+          }
+          function serverMessage(msg) {
+            socket.emit('server-message', 'server: ' + msg);
+          }
+          var socket = io('http://' + $('#server-address').val() + ':' + $('#server-port').val());
+          var role = "client";
+          $('form#setup').submit(function(e){
+            e.preventDefault();
+            socket = io('http://' + $('#server-address').val() + ':' + $('#server-port').val());
+            role = $('#roles :selected').val();
+          });
+          $('form#chat').submit(function(e){
+            e.preventDefault();
+            if(role == 'client') { clientMessage($('#m').val()); }
+            if(role == 'server') { serverMessage($('#m').val()); }
+            $('#m').val('');
+            return false;
+          });
+          socket.on('client-message', function(msg){
+              $('#clientStatus').text(msg);
+          });
+          socket.on('server-message', function(msg){
+              $('#serverStatus').text(msg);
+          });
         });
     </script>
   </body>
