--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       form#chat { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
       form#chat input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form#chat button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      .clientStatus { padding: 5px 10px; color:red}
-      .serverStatus { padding: 5px 10px; color:green}
+      .clientStatus { padding: 5px 10px; color:gray}
+      .serverStatus { padding: 5px 10px;}
+      .status {font-size:10em}
     </style>
   </head>
   <body>
@@ -29,18 +30,19 @@
         </div>
       </label>
       <button>Connect</button>
+      <a href="#" id="toggleSettings">Settings</a>
     </form>
     <div id="clientArea">
       <button id="clientButton" class="clientButton">Ready?</button>
-      <div id="clientsClientStatus" class="clientStatus" style="display:none"></div>
-      <div id="clientsServerStatus" class="serverStatus"></div>
+      <div id="clientsClientStatus" class="status clientStatus" style="display:none"></div>
+      <div id="clientsServerStatus" class="status serverStatus"></div>
     </div>
     <div id="serverArea">
       <button id="serverButtonBusy" class="serverButton">Busy</button>
       <button id="serverButtonWait">Wait...</button>
       <button id="serverButtonReady">Come in</button>
-      <div id="serversClientStatus" class="clientStatus"></div>
-      <div id="serversServerStatus" class="serverStatus"></div>
+      <div id="serversClientStatus" class="status clientStatus"></div>
+      <div id="serversServerStatus" class="status serverStatus" style="display:none"></div>
     </div>
     
     <script src="/socket.io/socket.io.js"></script>
@@ -48,10 +50,14 @@
     <script>
         $(function () {
           function clientMessage(msg) {
-            socket.emit('client-message', 'client: ' + msg);
+            $('#clientsServerStatus').hide();
+            $('#clientsClientStatus').show();
+            socket.emit('client-message', msg);
           }
           function serverMessage(msg) {
-            socket.emit('server-message', 'server: ' + msg);
+            $('#serversClientStatus').hide();
+            $('#serversServerStatus').show();
+            socket.emit('server-message', msg);
           }
           function showCorrectArea() {
             if(role == 'client') {
@@ -89,10 +95,18 @@
           socket.on('client-message', function(msg){
               $('#clientsClientStatus').text(msg);
               $('#serversClientStatus').text(msg);
+              $('#serversClientStatus').show();
+              $('#clientsClientStatus').show();
+              $('#serversServerStatus').hide();
+              $('#clientsServerStatus').hide();
           });
           socket.on('server-message', function(msg){
               $('#clientsServerStatus').text(msg);
               $('#serversServerStatus').text(msg);
+              $('#serversServerStatus').show();
+              $('#clientsServerStatus').show();
+              $('#serversClientStatus').hide();
+              $('#clientsClientStatus').hide();
           });
         });
     </script>
